.provarCaches/00D410000011HE0EAM/objects/rstk__icdoialert__c.object
<CustomObject>
    <description>icdoialert__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icdoialert_icitem__r.Name +&quot;(&quot;+  TEXT( rstk__icdoialert_doidate__c ) +&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdoialert_currwmsdate__c</fullName>
        <label>Due Date at WMS After</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icdoialert_doi__c</fullName>
        <label>Days of Inventory</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoialert_doidate__c</fullName>
        <label>DOI Below Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icdoialert_icitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>DOI Alerts</relationshipLabel>
        <relationshipName>icdoialerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdoialert_origwmsdate__c</fullName>
        <label>Due Date at WMS Before</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icdoialert_supreq__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Supplier Requisition</label>
        <referenceTo>rstk__supreq__c</referenceTo>
        <relationshipLabel>DOI Alerts</relationshipLabel>
        <relationshipName>icdoialerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DOI Alert</label>
    <listViews>
        <fullName>rstk__DOI_Alert</fullName>
        <columns>NAME</columns>
        <columns>rstk__icdoialert_icitem__c</columns>
        <columns>rstk__icdoialert_supreq__c</columns>
        <columns>rstk__icdoialert_doi__c</columns>
        <columns>rstk__icdoialert_doidate__c</columns>
        <columns>rstk__icdoialert_currwmsdate__c</columns>
        <columns>rstk__icdoialert_origwmsdate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>DOI Alert</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_DOI_Alert</fullName>
        <columns>NAME</columns>
        <columns>rstk__icdoialert_icitem__c</columns>
        <columns>rstk__icdoialert_supreq__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstk__icdoialert_doi__c</columns>
        <columns>rstk__icdoialert_doidate__c</columns>
        <columns>rstk__icdoialert_origwmsdate__c</columns>
        <columns>rstk__icdoialert_currwmsdate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>DOI Alert</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DOI Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>